[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/Objects/papel_pautado_a4.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Kid_Font_.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Objects/FNF_Logo_transparent.png" type="Texture" id=3]
[ext_resource path="res://music/Teroreterorerore.ogg" type="AudioStream" id=4]
[ext_resource path="res://Scripts/Title_screen.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Objects/Arrow1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Objects/Arrow2.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=24]
size = 60
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=26]

[sub_resource type="DynamicFont" id=19]
size = 60
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=21]

[sub_resource type="DynamicFont" id=27]
size = 60
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=28]
size = 60
outline_size = 1
outline_color = Color( 0, 0, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=29]
size = 40
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=34]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=30]
resource_name = "event"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "event2"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Credits:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -800, 0 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "event"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Credits:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -800, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=33]
resource_name = "event2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Credits:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -800, 0 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics/FnfLogoTransparent:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Graphics/Play:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Graphics/Credits_button:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "event"
length = 3.0
loop = true
step = 0.375
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics/FnfLogoTransparent:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.375, 0.75, 1.125, 1.5, 1.875, 2.25, 2.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics/Play:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.375, 0.75, 1.125, 1.5, 1.875, 2.25, 2.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Graphics/Credits_button:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.375, 0.75, 1.125, 1.5, 1.875, 2.25, 2.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}

[node name="Title_screen" type="Node2D"]
modulate = Color( 0, 0, 0, 1 )
script = ExtResource( 5 )

[node name="Graphics" type="Node2D" parent="."]

[node name="Bakcground" type="Sprite" parent="Graphics"]
position = Vector2( 399, 400.46 )
scale = Vector2( 0.707965, 0.495575 )
texture = ExtResource( 1 )

[node name="FnfLogoTransparent" type="Sprite" parent="Graphics"]
position = Vector2( 400, 400 )
texture = ExtResource( 3 )

[node name="Play" type="Button" parent="Graphics"]
margin_left = 300.0
margin_top = 588.0
margin_right = 500.0
margin_bottom = 648.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 24 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/focus = SubResource( 25 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 25 )
text = "Play!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits_button" type="Button" parent="Graphics"]
margin_left = 300.0
margin_top = 668.0
margin_right = 500.0
margin_bottom = 728.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 20 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Node2D" parent="."]
position = Vector2( -800, 0 )

[node name="Bakcground" type="Sprite" parent="Credits"]
position = Vector2( 399, 400.46 )
scale = Vector2( 0.707965, 0.495575 )
texture = ExtResource( 1 )

[node name="A_game_by" type="Label" parent="Credits"]
margin_left = 223.0
margin_top = 28.0
margin_right = 565.0
margin_bottom = 128.0
rect_rotation = -3.84097
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 27 )
text = "A Game by:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeichiTS" type="Label" parent="Credits"]
margin_left = 110.0
margin_top = 235.0
margin_right = 610.0
margin_bottom = 335.0
rect_rotation = -3.84097
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_fonts/font = SubResource( 28 )
text = "Programing: KeichiTS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jaspior" type="Label" parent="Credits"]
margin_left = 176.0
margin_top = 366.0
margin_right = 676.0
margin_bottom = 466.0
rect_rotation = 2.00559
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_fonts/font = SubResource( 28 )
text = "Art: Jaspior"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JulioCastaway" type="Label" parent="Credits"]
margin_left = 141.0
margin_top = 536.0
margin_right = 642.0
margin_bottom = 636.0
rect_rotation = 1.0
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_fonts/font = SubResource( 28 )
text = "Story: JulioCastaway"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GogodotJam2" type="Label" parent="Credits"]
margin_left = 260.0
margin_top = 88.0
margin_right = 761.0
margin_bottom = 188.0
rect_rotation = 2.64199
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 29 )
text = "(For GogodotJam 2)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow1" type="Sprite" parent="Credits"]
position = Vector2( 227, 388 )
texture = ExtResource( 6 )

[node name="Arrow2" type="Sprite" parent="Credits"]
position = Vector2( 607, 354 )
texture = ExtResource( 7 )

[node name="Back" type="Button" parent="Credits"]
margin_left = 300.0
margin_top = 668.0
margin_right = 613.0
margin_bottom = 728.0
rect_rotation = 0.947283
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 20 )
text = "Back Button"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 34 )
anims/event = SubResource( 30 )
anims/event2 = SubResource( 35 )

[node name="change_page" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 31 )
anims/event = SubResource( 32 )
anims/event2 = SubResource( 33 )

[node name="beat" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 22 )
anims/event = SubResource( 23 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.0

[connection signal="pressed" from="Graphics/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Graphics/Credits_button" to="." method="_on_Credits_button_pressed"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_Back_pressed"]
